Add 2 empty-files Day 16

--- a/test.html
+++ b/test.html
@@ -4,30 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+/* This will work with SVG 2 */
+        rect {
+            x : 0;
+            y: 30;
+            width: 100px;
+            height: 150px;
+            fill: #6e40aa;
+        }
+    </style>
 </head>
 <body>
-
-dong 1
-dong 2
-dong 3
-
-//ul>li[title=$#]*>{$#}+img[alt=$#]
-
-
-<ul>
-    <li title="dong 1">
-        dong 1
-        <img src="" alt="dong 1">
-    </li>
-    <li title="dong 2">
-        dong 2
-        <img src="" alt="dong 2">
-    </li>
-    <li title="dong 3">
-        dong 3
-        <img src="" alt="dong 3">
-    </li>
-</ul>
+    <svg width="170" height="170">
+        <rect />
+    </svg>
 
 </body>
 </html>
