Do Day 81 Table

--- a/test.html
+++ b/test.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=<div class=" table">
+  <link href="test.css" rel="stylesheet">
 </head>
+
 <body>
-<table>
-  <caption>Bảng báo cáo tài chính</caption>
-  <colgroup>
-    <col >
-    <col style="background: red " span="3">
-</colgroup>
-  <thead>
-    <tr>
-      <th>Mục</th>
-      <th>Quý 1</th>
-      <th>Quý 2</th>
-      <th>Tổng</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Doanh thu</td>
-      <td>1,000,000</td>
-      <td>1,200,000</td>
-      <td>2,200,000</td>
-    </tr>
-    <tr>
-      <td>Chi phí</td>
-      <td>800,000</td>
-      <td>900,000</td>
-      <td>1,700,000</td>
-    </tr>
-  </tbody>
-</table>
+  <div class="table-header">
+    <div class="table-cell">Tên</div>
+    <div class="table-cell">Email</div>
+    <div class="table-cell">Chức vụ</div>
+  </div>
+  <div class="table-row">
+    <div class="table-cell">Nguyễn Văn A</div>
+    <div class="table-cell">a@company.com</div>
+    <div class="table-cell">Developer</div>
+  </div>
+  <div class="table-row">
+    <div class="table-cell">Trần Thị B</div>
+    <div class="table-cell">b@company.com</div>
+    <div class="table-cell">Designer</div>
+  </div>
 </body>
+
 </html>
