--- a/index.html
+++ b/index.html
@@ -1,35 +1,12 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="test.css">
- </head>
- <body>
-<div id="root">
-  <div class="main-content">
-    <div class="sidebar">
-      <div class="dropdown">
-        <button>Menu</button>
-        <ul class="dropdown-menu">
-          <li>Item 1</li>
-          <li>Item 2</li>
-        </ul>
-      </div>
-    </div>
-    
-    <div class="article">
-      <div class="floating-ad" style="z-index: 999;">
-        Quảng cáo floating
-      </div>
-    </div>
-  </div>
+  <link rel="stylesheet" href="./test.css">
+</head>
+<body>
   
-  <div class="modal" style="z-index: 1000;">
-    Modal quan trọng
-  </div>
-</div>
-</div>
- </body>
- </html>
+</body>
+</html>
