Do Day82 CSS Units

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./test.css">
 </head>
+
 <body>
-  
+
+<div class="wrapper">
+  <div class="boxPercent">
+    I am 200px wide
+      <div class="box2Percent">I am 40% wide</div>
+  </div>
+</div>
+
+<div class="wrapper">
+  <div class="boxEm">
+    I am 200px wide
+      <div class="box2Em">I am 40% wide</div>
+  </div>
+</div>
+
 </body>
+
 </html>
