Do 2 file Day 85 Advanced CSS selector

--- a/fullroadmap/Day85-Advanced-CSS-Selector.html
+++ b/fullroadmap/Day85-Advanced-CSS-Selector.html
@@ -347,7 +347,7 @@
         <h1>🎯 Bộ Chọn CSS Nâng Cao (Advanced Selectors)</h1>
         
         <div class="intro">
-            <p><strong>Chào bạn!</strong> Khi bạn đã quen thuộc với các bộ chọn CSS cơ bản như theo loại (type), lớp (class), hoặc ID, để trở thành một "chuyên gia phẫu thuật CSS" thực thụ, bạn cần những công cụ chuyên biệt hơn. Các bộ chọn nâng cao cho phép bạn nhắm mục tiêu các phần tử một cách <strong>cụ thể và chi tiết hơn</strong>.</p>
+            <p> Khi bạn đã quen thuộc với các bộ chọn CSS cơ bản như theo loại (type), lớp (class), hoặc ID, để trở thành một "chuyên gia phẫu thuật CSS" thực thụ, bạn cần những công cụ chuyên biệt hơn. Các bộ chọn nâng cao cho phép bạn nhắm mục tiêu các phần tử một cách <strong>cụ thể và chi tiết hơn</strong>.</p>
         </div>
 
         <h2>I. 🔗 Các Bộ Kết Hợp (Combinators)</h2>
@@ -1029,7 +1029,7 @@ h1, h2, h3, h4, h5, h6 {
         }
 
         input:valid {
-            border-color: #28a745 !important;
+            /* border-color: #28a745 !important; */
         }
 
         input:invalid:not(:placeholder-shown) {
