--- a/test.html
+++ b/test.html
@@ -1,28 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=<div class=" table">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
   <link href="test.css" rel="stylesheet">
 </head>
 
 <body>
-  <div class="table-header">
-    <div class="table-cell">Tên</div>
-    <div class="table-cell">Email</div>
-    <div class="table-cell">Chức vụ</div>
-  </div>
-  <div class="table-row">
-    <div class="table-cell">Nguyễn Văn A</div>
-    <div class="table-cell">a@company.com</div>
-    <div class="table-cell">Developer</div>
-  </div>
-  <div class="table-row">
-    <div class="table-cell">Trần Thị B</div>
-    <div class="table-cell">b@company.com</div>
-    <div class="table-cell">Designer</div>
-  </div>
-</body>
 
+<div class="box-model-demo">
+  <div class="element">
+    Content Area
+  </div>
+</div>
+  
+</body>
 </html>
