--- a/test.html
+++ b/test.html
@@ -1,19 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="test.css" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Survey Form</title>
+  </head>
 
-<body>
+  <body>
+    <h1 id="title">FreeCodeCamp Servey Form</h1>
+    <p id="description">Thank you for taking the time to help us to improve the platform</p>
+    <form id="servey-form">
+      <label for="name-label">Name:</label>
+      <input type="text" id="name-label" required name="name" placeholder="Nguyen van a">
+      <br>
+      <label for="email-label">Email:</label>
+      <input 
+        type="email" 
+        id="email-label" 
+        name="email" 
+        required 
+        placeholder="youremail@gmail.com" 
+        minlength="4" 
+        maxlength="64"
+      >
 
-<div class="box-model-demo">
-  <div class="element">
-    Content Area
-  </div>
-</div>
-  
-</body>
+      <br>
+      <label for="number-label">Age (Option):</label>
+      <input type="number" id="number-label" name="age" min="3" max="100">
+      <br>
+  <label for="dropdown">Which option best describes your current role?</label>
+  <br>
+<select id="dropdown" name="dropdown">
+  <option value="Select your role" selected>Select your role</option>
+  <option value="AI Engineer">AI Engineer</option>
+  <option value="Nurser">Nurser</option>
+</select>
+<br>
+<label for="recommend">Would you recommend freeCodeCampe to you friend?</label>
+<br>
+<input type="radio" id ="definitely" name="recommend">
+<label for="definitely">Definitely</label> 
+<input type="radio" id="maybe" name="recommend" >
+<label for="maybe">May be</label>
+<input type="radio" name="recommend" id="notsure">
+<label for="notsure">Not sure</label>
+    <br>
+    <label > What would you like to see improved? (Check all that apply)</label>
+    <br>
+<input type="checkbox" id="frontendproject" name="frontendproject" checked value="Frontend project">
+<label for="frontendproject">Frontend Project</label>
+<input type="checkbox" id="wiki" name="wiki" value="Wiki">
+<label for="wiki">Wiki</label>
+<br>
+<label for="anycomment">Any Comments?</label>
+<textarea type="text" id="anycomment" cols="50" rows="10">Enter your comment here...</textarea>
+
+<button type="submit" id="submit">Submit</button>
+
+    </form>
+  </body>
 </html>
